Add pricing payment
